--- a/ui/flts/ui_scheme_lodgement.ui
+++ b/ui/flts/ui_scheme_lodgement.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>702</width>
-    <height>494</height>
+    <height>571</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -48,14 +48,31 @@
   </property>
   <widget class="QWizardPage" name="wizardPage1">
    <layout class="QGridLayout" name="gridLayout_2">
-    <item row="10" column="0">
-     <widget class="QLabel" name="label_10">
+    <item row="10" column="2">
+     <widget class="QComboBox" name="cbx_region"/>
+    </item>
+    <item row="9" column="0">
+     <widget class="QLabel" name="label_7">
       <property name="text">
-       <string>Registration Division</string>
+       <string>Land Rights Office</string>
       </property>
      </widget>
     </item>
-    <item row="5" column="1">
+    <item row="13" column="0">
+     <widget class="QLabel" name="label_11">
+      <property name="text">
+       <string>Block Area</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="0" colspan="3">
+     <layout class="QVBoxLayout" name="vlNotification">
+      <property name="bottomMargin">
+       <number>10</number>
+      </property>
+     </layout>
+    </item>
+    <item row="7" column="2">
      <widget class="QDateEdit" name="date_establish">
       <property name="minimumDate">
        <date>
@@ -69,41 +86,7 @@
       </property>
      </widget>
     </item>
-    <item row="3" column="0">
-     <widget class="QLabel" name="label_2">
-      <property name="text">
-       <string>Scheme Name</string>
-      </property>
-     </widget>
-    </item>
-    <item row="8" column="0">
-     <widget class="QLabel" name="label_8">
-      <property name="text">
-       <string>Region</string>
-      </property>
-     </widget>
-    </item>
-    <item row="9" column="0">
-     <widget class="QLabel" name="label_9">
-      <property name="text">
-       <string>Township Name</string>
-      </property>
-     </widget>
-    </item>
-    <item row="10" column="1">
-     <widget class="QComboBox" name="cbx_reg_div"/>
-    </item>
-    <item row="8" column="1">
-     <widget class="QComboBox" name="cbx_region"/>
-    </item>
-    <item row="4" column="0">
-     <widget class="QLabel" name="label_3">
-      <property name="text">
-       <string>Date of Approval</string>
-      </property>
-     </widget>
-    </item>
-    <item row="4" column="1">
+    <item row="6" column="2">
      <widget class="QDateEdit" name="date_apprv">
       <property name="minimumDate">
        <date>
@@ -117,51 +100,48 @@
       </property>
      </widget>
     </item>
-    <item row="6" column="1">
-     <widget class="QComboBox" name="cbx_relv_auth"/>
-    </item>
-    <item row="6" column="0">
-     <widget class="QLabel" name="label_6">
-      <property name="text">
-       <string>Relevant Authority</string>
-      </property>
-     </widget>
-    </item>
-    <item row="7" column="0">
-     <widget class="QLabel" name="label_7">
-      <property name="text">
-       <string>Land Rights Office</string>
-      </property>
-     </widget>
-    </item>
-    <item row="9" column="1">
-     <widget class="QLineEdit" name="lnedit_twnshp"/>
-    </item>
-    <item row="2" column="1">
+    <item row="4" column="2">
      <widget class="QLineEdit" name="lnedit_schm_num">
       <property name="readOnly">
        <bool>true</bool>
       </property>
      </widget>
     </item>
-    <item row="5" column="0">
+    <item row="12" column="0">
+     <widget class="QLabel" name="label_10">
+      <property name="text">
+       <string>Registration Division</string>
+      </property>
+     </widget>
+    </item>
+    <item row="11" column="0">
+     <widget class="QLabel" name="label_9">
+      <property name="text">
+       <string>Township Name</string>
+      </property>
+     </widget>
+    </item>
+    <item row="10" column="0">
+     <widget class="QLabel" name="label_8">
+      <property name="text">
+       <string>Region</string>
+      </property>
+     </widget>
+    </item>
+    <item row="11" column="2">
+     <widget class="QLineEdit" name="lnedit_twnshp"/>
+    </item>
+    <item row="7" column="0">
      <widget class="QLabel" name="label_4">
       <property name="text">
        <string>Date of Esablishment</string>
       </property>
      </widget>
     </item>
-    <item row="7" column="1">
+    <item row="9" column="2">
      <widget class="QComboBox" name="cbx_lro"/>
     </item>
-    <item row="11" column="0">
-     <widget class="QLabel" name="label_11">
-      <property name="text">
-       <string>Block Area</string>
-      </property>
-     </widget>
-    </item>
-    <item row="11" column="1">
+    <item row="13" column="2">
      <widget class="QDoubleSpinBox" name="dbl_spinbx_block_area">
       <property name="decimals">
        <number>4</number>
@@ -171,7 +151,14 @@
       </property>
      </widget>
     </item>
-    <item row="1" column="0" colspan="2">
+    <item row="5" column="0">
+     <widget class="QLabel" name="label_2">
+      <property name="text">
+       <string>Scheme Name</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="0" colspan="3">
      <widget class="QLabel" name="desc_Label1">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
@@ -184,20 +171,33 @@
       </property>
      </widget>
     </item>
-    <item row="3" column="1">
+    <item row="5" column="2">
      <widget class="QLineEdit" name="lnedit_schm_nam"/>
     </item>
-    <item row="0" column="0" colspan="2">
-     <layout class="QVBoxLayout" name="vlNotification">
-      <property name="bottomMargin">
-       <number>10</number>
-      </property>
-     </layout>
+    <item row="12" column="2">
+     <widget class="QComboBox" name="cbx_reg_div"/>
     </item>
-    <item row="2" column="0">
+    <item row="6" column="0">
+     <widget class="QLabel" name="label_3">
+      <property name="text">
+       <string>Date of Approval</string>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="0">
      <widget class="QLabel" name="lbl_Sceme">
       <property name="text">
        <string>Scheme Number</string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="2">
+     <widget class="QComboBox" name="cbx_relv_auth"/>
+    </item>
+    <item row="2" column="0">
+     <widget class="QLabel" name="label_6">
+      <property name="text">
+       <string>Relevant Authority</string>
       </property>
      </widget>
     </item>
@@ -244,7 +244,7 @@
      </widget>
     </item>
     <item row="5" column="1">
-     <widget class="QPushButton" name="btn_validdate_holders">
+     <widget class="QPushButton" name="btn_validate_holders">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
         <horstretch>0</horstretch>
