--- a/ui/flts/ui_scheme_lodgement.ui
+++ b/ui/flts/ui_scheme_lodgement.ui
@@ -320,18 +320,12 @@
     <item row="2" column="0" colspan="2">
      <widget class="QTableView" name="tbw_documents"/>
     </item>
-    <item row="3" column="0">
-     <spacer name="horizontalSpacer">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
+    <item row="0" column="0" colspan="2">
+     <layout class="QVBoxLayout" name="vlNotification_3">
+      <property name="bottomMargin">
+       <number>10</number>
       </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>40</width>
-        <height>20</height>
-       </size>
-      </property>
-     </spacer>
+     </layout>
     </item>
     <item row="3" column="1">
      <widget class="QPushButton" name="btn_upld_multi">
@@ -354,20 +348,13 @@
        </size>
       </property>
       <property name="text">
-       <string>Upload Documents</string>
+       <string>Upload From Directory...</string>
       </property>
       <property name="icon">
-       <iconset resource="../../resources.qrc">
+       <iconset>
         <normaloff>:/plugins/stdm/images/icons/flts_import_file.png</normaloff>:/plugins/stdm/images/icons/flts_import_file.png</iconset>
       </property>
      </widget>
-    </item>
-    <item row="0" column="0" colspan="2">
-     <layout class="QVBoxLayout" name="vlNotification_3">
-      <property name="bottomMargin">
-       <number>10</number>
-      </property>
-     </layout>
     </item>
    </layout>
   </widget>
