--- a/ui/flts/ui_scheme_lodgement.ui
+++ b/ui/flts/ui_scheme_lodgement.ui
@@ -377,7 +377,7 @@
      </widget>
     </item>
     <item>
-     <widget class="QTreeView" name="tr_summary"/>
+     <widget class="SchemeSummaryWidget" name="tr_summary"/>
     </item>
    </layout>
   </widget>
@@ -392,6 +392,11 @@
    <class>DocumentTableWidget</class>
    <extends>QTableWidget</extends>
    <header>stdm.ui.customcontrols.documents_table_widget</header>
+  </customwidget>
+  <customwidget>
+   <class>SchemeSummaryWidget</class>
+   <extends>QTreeView</extends>
+   <header>stdm.ui.customcontrols.scheme_summary_widget</header>
   </customwidget>
  </customwidgets>
  <resources>
